-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 5.0.3
-
-
beb167a963b1d9161c26769aa08be4670206249e (qt-creator/qt-creator/6.0)
When using MSVC2019 ARM64 kit, CMake fails to configure any project with following errors:
Running C:\Qt\Tools\CMake_64\bin\cmake.exe -S C:/Qt/Examples/Qt-6.2.1/widgets/gallery -B C:/Qt/Examples/Qt-6.2.1/widgets/build-gallery-Desktop_Qt_6_2_1_MSVC2019_ARM64-Debug in C:\Qt\Examples\Qt-6.2.1\widgets\build-gallery-Desktop_Qt_6_2_1_MSVC2019_ARM64-Debug.
-- Could NOT find Qt6CoreTools (missing: Qt6CoreTools_DIR)
CMake Warning at C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6/Qt6Config.cmake:176 (find_package):
Found package configuration file:
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6Core/Qt6CoreConfig.cmake
but it set Qt6Core_FOUND to FALSE so package "Qt6Core" is considered to be
NOT FOUND.
Call Stack (most recent call first):
CMakeLists.txt:18 (find_package)
CMake Warning at CMakeLists.txt:18 (find_package):
Found package configuration file:
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6/Qt6Config.cmake
but it set Qt6_FOUND to FALSE so package "Qt6" is considered to be NOT
FOUND. Reason given by package:
Failed to find Qt component "Core".
Expected Config file at
"C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6Core/Qt6CoreConfig.cmake" exists
-- Could NOT find Qt6CoreTools (missing: Qt6CoreTools_DIR)
CMake Warning at C:/Qt/Tools/CMake_64/share/cmake-3.21/Modules/CMakeFindDependencyMacro.cmake:47 (find_package):
Found package configuration file:
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6Core/Qt6CoreConfig.cmake
but it set Qt6Core_FOUND to FALSE so package "Qt6Core" is considered to be
NOT FOUND.
Call Stack (most recent call first):
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6/QtPublicDependencyHelpers.cmake:14 (find_dependency)
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6Gui/Qt6GuiDependencies.cmake:91 (_qt_internal_find_dependencies)
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6Gui/Qt6GuiConfig.cmake:40 (include)
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6/Qt6Config.cmake:176 (find_package)
CMakeLists.txt:19 (find_package)
CMake Warning at C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6/Qt6Config.cmake:176 (find_package):
Found package configuration file:
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6Gui/Qt6GuiConfig.cmake
but it set Qt6Gui_FOUND to FALSE so package "Qt6Gui" is considered to be
NOT FOUND. Reason given by package:
Qt6Gui could not be found because dependency Qt6Core could not be found.
Call Stack (most recent call first):
CMakeLists.txt:19 (find_package)
CMake Warning at CMakeLists.txt:19 (find_package):
Found package configuration file:
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6/Qt6Config.cmake
but it set Qt6_FOUND to FALSE so package "Qt6" is considered to be NOT
FOUND. Reason given by package:
Failed to find Qt component "Gui".
Expected Config file at
"C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6Gui/Qt6GuiConfig.cmake" exists
-- Could NOT find Qt6WidgetsTools (missing: Qt6WidgetsTools_DIR)
CMake Warning at C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6/Qt6Config.cmake:176 (find_package):
Found package configuration file:
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6Widgets/Qt6WidgetsConfig.cmake
but it set Qt6Widgets_FOUND to FALSE so package "Qt6Widgets" is considered
to be NOT FOUND.
Call Stack (most recent call first):
CMakeLists.txt:20 (find_package)
CMake Warning at CMakeLists.txt:20 (find_package):
Found package configuration file:
C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6/Qt6Config.cmake
but it set Qt6_FOUND to FALSE so package "Qt6" is considered to be NOT
FOUND. Reason given by package:
Failed to find Qt component "Widgets".
Expected Config file at
"C:/Qt/6.2.1/msvc2019_arm64/lib/cmake/Qt6Widgets/Qt6WidgetsConfig.cmake"
exists
-- Configuring done
CMake Error: AUTOMOC for target gallery: Could not find moc executable target Qt6::moc
CMake Generate step failed. Build files cannot be regenerated correctly.
CMake process exited with exit code 1.
Elapsed time: 00:01.
Initial CMake parameters are the default ones:
-GNinja
-DCMAKE_BUILD_TYPE:STRING=Debug
-DCMAKE_PROJECT_INCLUDE_BEFORE:PATH=%{IDE:ResourcePath}/package-manager/auto-setup.cmake
-DCMAKE_CXX_COMPILER:STRING=%{Compiler:Executable:Cxx}
-DCMAKE_C_COMPILER:STRING=%{Compiler:Executable:C}
-DCMAKE_PREFIX_PATH:STRING=%{Qt:QT_INSTALL_PREFIX}
-DQT_QMAKE_EXECUTABLE:STRING=%{Qt:qmakeExecutable}
QMake works with this kit.
This is reproducible with any Qt examples, such as gallery.
| For Gerrit Dashboard: QTCREATORBUG-26636 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 384087,2 | Add qt's toolchain file to initial cmake arguments for Windows on ARM64 | 6.0 | qt-creator/qt-creator | Status: MERGED | -1 | 0 |